# gopro-sdk-py

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  contributing.md  development.md  index.md  quickstart.md  troubleshooting.md  why-this-sdk.md
docs/api/: client.md  commands.md  config.md  connection.md  exceptions.md  multi-camera.md  overview.md
docs/examples/: basic.md  cohn.md  gui.md  multi-camera.md
examples/: basic_example.py  cohn_config_example.py  multi_camera_example.py
src/gopro_sdk/: __init__.py  ble_uuid.py  client.py  config.py  exceptions.py  logging_config.py  multi_camera.py  proto.py  rich_utils.py  state_parser.py
src/gopro_sdk/commands/: __init__.py  base.py  ble_commands.py  http_commands.py  media_commands.py  webcam_commands.py
src/gopro_sdk/connection/: __init__.py  ble_manager.py  ble_scanner.py  health_check.py  http_manager.py
src/gopro_sdk/proto/: __init__.py  camera_control_pb2.py  cohn_pb2.py  live_streaming_pb2.py  media_pb2.py  network_management_pb2.py  preset_status_pb2.py  request_get_preset_status_pb2.py  response_generic_pb2.py  set_camera_control_status_pb2.py  turbo_transfer_pb2.py
tests/: README.md  conftest.py  test_basic.py  test_hardware.py  test_unit.py
