# ============================================================================
# Build System - PEP 517/518
# ============================================================================
[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

# ============================================================================
# Project Metadata - PEP 621
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# ============================================================================
[project]
name = "gopro-sdk-py"
version = "1.0.1"
description = "A Python SDK for controlling GoPro cameras, optimized for multi-camera COHN scenarios"
readme = "README.md"
requires-python = ">=3.12"
# License - PEP 639 (SPDX expression)
# https://spdx.org/licenses/
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "sean2077", email = "sean2077@users.noreply.github.com" }]
maintainers = [
  { name = "sean2077", email = "sean2077@users.noreply.github.com" },
]
keywords = [
  "gopro",
  "camera",
  "sdk",
  "bluetooth",
  "ble",
  "cohn",
  "multi-camera",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

# ----------------------------------------------------------------------------
# Core dependencies - always installed with the package
# ----------------------------------------------------------------------------
dependencies = [
  "open-gopro>=0.22",
  "bleak>=0.22",
  "aiohttp>=3.13",
  "rich>=14.0",
  # Transitive dependencies that we import directly
  "construct>=2.10",
  "tinydb>=4.8",
]

# ----------------------------------------------------------------------------
# Optional dependencies for users - PEP 621
# Install with: uv add gopro-sdk-py[extra_name]
# or: pip install gopro-sdk-py[extra_name]
# ----------------------------------------------------------------------------
[project.optional-dependencies]
# gui = ["PySide6>=6.7"]
# all = ["gopro-sdk-py[gui]"]

# Entry points - console scripts
[project.scripts]
# gopro-gui = "gopro_gui.main:main"

# Project URLs - displayed on PyPI
[project.urls]
Homepage = "https://github.com/sean2077/gopro-sdk-py"
Repository = "https://github.com/sean2077/gopro-sdk-py.git"
Issues = "https://github.com/sean2077/gopro-sdk-py/issues"
Changelog = "https://github.com/sean2077/gopro-sdk-py/blob/main/CHANGELOG.md"
Documentation = "https://sean2077.github.io/gopro-sdk-py/"

# ============================================================================
# Development dependencies - PEP 735
# NOT shipped with the package, only for development
# Install with: uv sync --group dev (or --all-groups)
# ============================================================================
[dependency-groups]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7.0",
  "ruff>=0.14",
  "pre-commit>=4.5",
  "poethepoet>=0.37",
  "python-dotenv>=1.2",
  "ty>=0.0.1a9",
  "deptry>=0.23.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.7",
  "mkdocstrings[python]>=0.30",
  "mkdocs-git-revision-date-localized-plugin>=1.5",
]

# ============================================================================
# Build Configuration - Hatchling
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/gopro_sdk"]

# Note: sdist configuration is usually not needed - hatchling has sensible defaults
# It respects .gitignore and includes pyproject.toml, README, LICENSE automatically

# ============================================================================
# Tool Configurations
# ============================================================================

# ----------------------------------------------------------------------------
# Ruff - Linter & Formatter
# https://docs.astral.sh/ruff/configuration/
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
# Exclude commonly ignored directories
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "S",   # flake8-bandit (security)
  "PTH", # flake8-use-pathlib
  "PLC", # pylint conventions
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line length handled by ruff format
  "B008", # function calls in argument defaults (common in typer/fastapi)
  "S101", # allow assert (use --select S for security checks)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # allow assert in tests
  "PLC0415", # allow imports inside functions in tests
  "PLR2004", # allow magic numbers in tests
]
"__init__.py" = ["F401"] # allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["gopro_sdk"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ----------------------------------------------------------------------------
# ty - Type Checker (Astral)
# https://github.com/astral-sh/ty
# ----------------------------------------------------------------------------
[tool.ty]
# No special configuration needed, ty auto-detects src layout

# ----------------------------------------------------------------------------
# pytest - Testing Framework
# https://docs.pytest.org/en/stable/reference/customize.html
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "-ra",                 # show extra test summary info for all except passed
  "--strict-markers",    # markers not registered in config raise errors
  "--strict-config",     # any warnings from parsing config file raise errors
  "--asyncio-mode=auto",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "hardware: marks tests requiring actual hardware (cameras)",
  "integration: marks tests as integration tests",
]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
xfail_strict = true # xfail tests that pass are considered failures

# ----------------------------------------------------------------------------
# Coverage.py - Code Coverage
# https://coverage.readthedocs.io/en/latest/config.html
# ----------------------------------------------------------------------------
[tool.coverage.run]
branch = true
parallel = true
source = ["src"]
omit = ["*/__init__.py", "*/cli.py"]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.paths]
source = ["src/gopro_sdk"]

# ----------------------------------------------------------------------------
# Poethepoet - Task Runner
# https://poethepoet.natn.io/
# Cross-platform alternative to Makefile
# ----------------------------------------------------------------------------
[tool.poe.tasks.format]
cmd = "ruff format . && ruff check . --fix --select I"
help = "Format code and organize imports"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Run linter"

[tool.poe.tasks.lint-fix]
cmd = "ruff check . --fix"
help = "Run linter and fix auto-fixable issues"

[tool.poe.tasks.type-check]
cmd = "ty check"
help = "Run type checker"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Run tests"

[tool.poe.tasks.test-cov]
cmd = "pytest --cov --cov-config=pyproject.toml --cov-report=xml --cov-report=html"
help = "Run tests with coverage"

[tool.poe.tasks.deptry]
cmd = "deptry src"
help = "Check for obsolete dependencies"

[tool.poe.tasks.check]
sequence = ["format", "lint", "type-check", "deptry"]
help = "Run all code quality checks"

[tool.poe.tasks.clean]
# Cross-platform compatible clean using Python -c
cmd = """
python -c "
import shutil
from pathlib import Path
for d in ['.pytest_cache', '.ruff_cache', '.mypy_cache', '.coverage', 'htmlcov', 'dist', 'build', '.eggs']:
    shutil.rmtree(d, ignore_errors=True)
for p in Path('.').rglob('__pycache__'):
    shutil.rmtree(p, ignore_errors=True)
for p in Path('.').glob('*.egg-info'):
    shutil.rmtree(p, ignore_errors=True)
print('Cleaned up generated files')
"
"""
help = "Clean up generated files (cross-platform)"

[tool.poe.tasks.docs]
cmd = "mkdocs serve"
help = "Start documentation server"

[tool.poe.tasks.docs-build]
cmd = "mkdocs build --strict"
help = "Build documentation"

[tool.poe.tasks.update-deps]
cmd = "uv sync --all-groups --all-extras --upgrade"
help = "Update all dependencies"
